--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Site settings
 title: Tanul Christian
-twitter_username: ChristianTanul
 name: Tanul Christian
 
 # Build settings
@@ -59,6 +58,7 @@ intro: |
    Nothing's more thrilling than the dopamine of finding the solution to a problem. <br/><br/>
    I am currently working as a Web Developer & IT Specialist for a contract research organization called OperaCRO, but I am looking for a different job since the tasks that I am currently doing do not match what I can see myself doing in the future. <br/><br/>
    As to what I have done for my current team so far, I've made the lives of my work colleagues easier by creating an internal wiki website containing most of the useful information that people would need quick access to. I have also created a workflow application that automates the processes of employees requesting to purchase an item/service or going on vacations.
+   I am primarily looking for a job in back-end or fullstack development. I am not stuck on my previously learned programming languages, as I have discovered that I can easily adapt and learn new technologies (and it also makes things more interesting, unless we're talking about C++).
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
 additionalinfo: |
    <strong>WordPress</strong>: I have built a dual-language website for an industrial engineering company containing an interactive catalogue of their various projects. I have also created a presentation website for a beauty salon containing a portfolio of photos and videos including their work and a Google Maps widget showing their beauty salon’s location. <br/><br/>
