--- a/_config.yml
+++ b/_config.yml
@@ -28,22 +28,22 @@ skills:
  
 #Work experience is required
 roles:
- - title: Freelancing WordPress Web Developer
+ - title: Freelancing WordPress Developer
    start: 2018
    end: 2020
    description: A reasonable amount of time building websites for different clients, which has given me an exposure to using WordPress.
   
- - title: Web Developer & IT at OperaCRO SRL
+ - title: Web Developer & IT services at OperaCRO SRL
    start: 2020
    end: Ongoing
-   description: I have made the lives of my work colleagues easier by creating an internal wiki website containing most of the useful information that people would need quick access to. I have also created a workflow application that automates the processes of employees requesting to purchase an item/service or going on vacations.
+   description: I am currently working in a clinical research organization called OperaCRO, and during my time here I have done several quality of life improvements for the team such as a personnel-only wiki website, and an automated workflow for processing purchase requests (using Power Automate). Because of the high number of bugs and issues related to Microsoft's Power Automate, I've decided to try and take on the task of creating a "custom" automated workflow system using Python, Airflow and Docker, and use that "base" workflow system to automate different tasks needed for the company (purchase requests, personnel requisition, leave requests, etc.).
 
 
 #List of interesting Github repo/projects to include - optional
 github:
- - chriskryx/web-scraping-tool
+ - chriskryx/airflow-workflow-project
  - chriskryx/django_blog_project
- - chriskryx/django-deployment-example
+ - chriskryx/web-scraping-tool
  - chriskryx/wrapt
 
 #Stackoverflow flair is optional
@@ -52,17 +52,14 @@ stackoverflow:
    flairimageurl: https://stackoverflow.com/users/flair/10699002.png
 
 intro: |
-   I am a developer with 3 years of experience. I have primarily worked in <strong>Python</strong>, and came across quite some technologies and frameworks thereon such as <strong>Django</strong>, <strong>BeautifulSoup</strong>, <strong>Tensorflow</strong> and <strong>Keras</strong>. <br/><br/>
-   During the past 2 years, before starting with Django, <strong>I have spent a reasonable amount of time building websites for different clients</strong>, which has given me an exposure to using <strong>WordPress</strong>. <br/><br/>
-   I've always tried to <strong>use my knowledge in coding to automate tasks in my life</strong>, such as using web scraping to find companies that might need a better website.
-   Nothing's more thrilling than the dopamine of finding the solution to a problem. <br/><br/>
-   I am currently working as a Web Developer & IT Specialist for a contract research organization called OperaCRO, but I am looking for a different job since the tasks that I am currently doing do not match what I can see myself doing in the future. <br/><br/>
-   As to what I have done for my current team so far, I've made the lives of my work colleagues easier by creating an internal wiki website containing most of the useful information that people would need quick access to. I have also created a workflow application that automates the processes of employees requesting to purchase an item/service or going on vacations.
-   I am primarily looking for a job in back-end or fullstack development. I am not stuck on my previously learned programming languages, as I have discovered that I can easily adapt and learn new technologies (and it also makes things more interesting, unless we're talking about C++).
+   I am a developer with 3 years of experience. I have primarily worked in Python, and came across quite some technologies and frameworks thereon such as Django, BeautifulSoup, Tensorflow and Keras.
+During the past 2 years, before starting with Django, I have spent a reasonable amount of time building websites for different clients, which has given me an exposure to using WordPress.
+I've always tried to use my knowledge in Python to automate tasks in my life, such as using web scraping to find companies that might need a better website.
+Nothing's more thrilling than the dopamine of finding the solution to a problem. 
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
 additionalinfo: |
-   <strong>WordPress</strong>: I have built a dual-language website for an industrial engineering company containing an interactive catalogue of their various projects. I have also created a presentation website for a beauty salon containing a portfolio of photos and videos including their work and a Google Maps widget showing their beauty salon’s location. <br/><br/>
-   <strong>Adobe Software</strong>: Even though it is not related to my coding experience, knowledge in Adobe Photoshop, After Effects and Premiere Pro is part of my skillset as well. I have used them for some side income by freelancing. <br/><br/>
+   <strong>WordPress</strong>: I have built several websites while freelancing. Some of the websites were made for an industrial engineering company, for a beauty salon and for a car dealership.<br/><br/>
+   <strong>Adobe Software</strong>: Even though it is not related to my coding experience, knowledge in Adobe Photoshop, After Effects and Premiere Pro is part of my skillset as well. I have used them for side income while freelancing as well. <br/><br/>
    <strong>Languages</strong>: While my mother language is <strong>romanian</strong>, I consider myself rather fluent in <strong>english</strong> with good verbal and written communication. <br/><br/>
    <strong>Social skills</strong>: I don't think the right way to show these is through my CV, but if you met me in person you could probably notice these as my predominant social features: <strong>cooperation, clarity and concision, friendliness, respect, open-mindedness</strong>. <br/><br/>
-   <strong>Organisational skills</strong>: Same as above, <strong>creating and keeping deadlines</strong> like my life depends on it, <strong>critical thinking</strong>, <strong>analysis</strong> and <strong>attention to details</strong> and the ability to <strong>identify problems</strong>. <br/><br/>
+   <strong>Organisational skills</strong>: I tend to <strong>create and keep deadlines</strong> like my life depends on it. <strong>Critical thinking</strong>, <strong>analysis</strong> and <strong>attention to details</strong> and the ability to <strong>identify problems</strong> are also some attributes with which I would present myself (not very modestly). <br/><br/>
