--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ skills:
  
 #Work experience is required
 roles:
- - title: Freelancing WordPress Developer
+ - title: Freelancing WordPress & Python Developer
    start: 2018
    end: 2020
    description: A reasonable amount of time building websites for different clients, which has given me an exposure to using WordPress.
