--- a/_config.yml
+++ b/_config.yml
@@ -63,4 +63,4 @@ intro: |
    I enjoy learning new technologies and nothing's more thrilling than the dopamine of finding the solution to a problem. <br/><br/>
 #An additional info freetext section is optional at the bottom of the page - can be text or HTML
 additionalinfo: |
-   <strong>Other interests</strong>: Table tennis, Board games, Video Games, Fitness & Nutrition, Virtual & Augmented Reality, Neuralink, Reddit, Photography
+   <strong>Other interests</strong>: Table tennis, Hiking, Board games, Video Games, Fitness & Nutrition, Hip Hop, Virtual & Augmented Reality, Neuralink, Reddit, Photography, PC Building, Stand-up Comedy
